Adjusted some features that were incomplete

--- a/Front-end App/DeliverItAngularProject/src/app/all-delivered-orders/all-delivered-orders.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/all-delivered-orders/all-delivered-orders.component.html
@@ -2,7 +2,7 @@
 
 <nav class="navbar">
   <div class="container-menu">
-    <span class="material-symbols-outlined" (click)="goBackToOrigin()">arrow_back</span>
+    <span class="material-symbols-outlined" routerLink="/home-delivery-boy">arrow_back</span>
   </div>
 </nav>
 
