--- a/Front-end App/DeliverItAngularProject/src/app/withdrawal-amount/withdrawal-amount.component.scss
+++ b/Front-end App/DeliverItAngularProject/src/app/withdrawal-amount/withdrawal-amount.component.scss
@@ -101,3 +101,17 @@ h1{
   font-family: Poppins;
   text-align: left;
 }
+
+.navbar {
+  margin-top: 10px;
+  display: flex;
+  justify-content: left;
+  height: 7.5vh;
+}
+
+.container-menu {
+  width: 25%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
