--- a/Front-end App/DeliverItAngularProject/src/app/commission-percentage-list/commission-percentage-list.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/commission-percentage-list/commission-percentage-list.component.html
@@ -10,7 +10,7 @@
 <h1 class="descriptionLabel">Todas las comisiones</h1>
 <div class="container">
   <div class="cards-container">
-    <li *ngFor="let commission of commissions" [ngClass]="{ 'current': commission === getCurrentCommission() }" (click)="onEditClick(commission)">
+    <li *ngFor="let commission of commissions" (click)="onEditClick(commission)">
       Desde: {{commission.validSince}} - Porcentaje: {{(commission.percentage*100).toFixed(2)}}%  
     </li>
   </div>
