--- a/Front-end App/DeliverItAngularProject/src/app/withdrawal-confirmed/withdrawal-confirmed.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/withdrawal-confirmed/withdrawal-confirmed.component.html
@@ -3,7 +3,7 @@
     <h1>Retiro realizado con éxito</h1>
     <h4>Has retirado ${{amount}} de tu balance</h4>
     <div class="video-container">
-      <video src="../../assets/vecteezy_green-check-mark-icon-animation-animated-check-mark-on_17110950.mp4" width="400"
+      <video src="../../assets/green-check.mp4" width="400"
         autoplay loop></video>
     </div>
     <app-primary-button (click)="goBackToMenu()" title="VOLVER AL MENÚ DE RETIROS" routerLink="/withdrawal-menu"></app-primary-button>
