Shop & Product routes protected, shop logout added and owner bug fixed

--- a/Front-end App/DeliverItAngularProject/src/app/home-shop/home-shop.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/home-shop/home-shop.component.html
@@ -88,4 +88,18 @@
       </div>
     </div>
   </div>
+  <div class="options logout-button" (click)="logout()">
+    <div class="center">
+      <div class="buttons_logos">
+        <img
+          id="pencil_icon"
+          src="assets\buttons_logos\logout_icon.png"
+          alt="stats_icon"
+        />
+      </div>
+      <div class="button_text">
+        <p id="add_prod_text">Cerrar sesión</p>
+      </div>
+    </div>
+  </div>
 </div>
