--- a/Front-end App/DeliverItAngularProject/src/app/shop-list-product-variations/shop-list-product-variations.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/shop-list-product-variations/shop-list-product-variations.component.html
@@ -15,7 +15,7 @@
     </div>
   </div>
 </div>
-<h6 class="products-title">Productos</h6>
+<h6 class="products-title">Variaciones de producto</h6>
 <div class="content-container" id="margin-0">
   <div class="cards-container">
     <app-shop-card
