--- a/Front-end App/DeliverItAngularProject/src/app/order-confirmed/order-confirmed.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/order-confirmed/order-confirmed.component.html
@@ -1,11 +1,22 @@
 <div class="parent-container">
   <div class="container">
     <h1>Gracias por su compra!</h1>
-    <h4>El pedido esta pendiente de que lo acepte un repartidor. Te avisaremos cuando ya este en camino</h4>
+    <h4>
+      El pedido esta pendiente de que lo acepte un repartidor. Te avisaremos
+      cuando ya este en camino
+    </h4>
     <div class="video-container">
-      <video src="../../assets/green-check.mp4"
-      width="400" autoplay loop></video>
+      <video
+        playsinline
+        src="../../assets/green-check.mp4"
+        width="400"
+        autoplay
+        loop
+      ></video>
     </div>
-    <app-primary-button title="VOLVER AL INICIO" routerLink="/home-customer"></app-primary-button>
+    <app-primary-button
+      title="VOLVER AL INICIO"
+      routerLink="/home-customer"
+    ></app-primary-button>
   </div>
 </div>
