--- a/Front-end App/DeliverItAngularProject/src/app/withdrawal-confirmed/withdrawal-confirmed.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/withdrawal-confirmed/withdrawal-confirmed.component.html
@@ -1,11 +1,20 @@
 <div class="parent-container">
   <div class="container">
     <h1>Retiro realizado con éxito</h1>
-    <h4>Has retirado ${{amount}} de tu balance</h4>
+    <h4>Has retirado ${{ amount }} de tu balance</h4>
     <div class="video-container">
-      <video src="../../assets/green-check.mp4" width="400"
-        autoplay loop></video>
+      <video
+        playsinline
+        src="../../assets/green-check.mp4"
+        width="400"
+        autoplay
+        loop
+      ></video>
     </div>
-    <app-primary-button (click)="goBackToMenu()" title="VOLVER AL MENÚ DE RETIROS" routerLink="/withdrawal-menu"></app-primary-button>
+    <app-primary-button
+      (click)="goBackToMenu()"
+      title="VOLVER AL MENÚ DE RETIROS"
+      routerLink="/withdrawal-menu"
+    ></app-primary-button>
   </div>
 </div>
