--- a/Front-end App/DeliverItAngularProject/src/app/edit-commission-percentage/edit-commission-percentage.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/edit-commission-percentage/edit-commission-percentage.component.html
@@ -2,7 +2,7 @@
 
 <nav class="navbar">
   <div class="container-menu">
-    <span class="material-symbols-outlined" routerLink="/admin-panel">arrow_back</span>
+    <span class="material-symbols-outlined" routerLink="/commission-percentage-list">arrow_back</span>
   </div>
 </nav>
 
