--- a/Front-end App/DeliverItAngularProject/src/app/payment-type-list/payment-type-list.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/payment-type-list/payment-type-list.component.html
@@ -1,5 +1,14 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 
+<link rel="stylesheet"
+  href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
+<nav class="navbar">
+  <div class="container-menu">
+    <span class="material-symbols-outlined" routerLink="/admin-panel">arrow_back</span>
+  </div>
+</nav>
+
 <h1 class="descriptionLabel">Todas las formas de pago</h1>
 <div class="container">
     <div class="cards-container">
