--- a/Front-end App/DeliverItAngularProject/src/app/payment-type-list/payment-type-list.component.scss
+++ b/Front-end App/DeliverItAngularProject/src/app/payment-type-list/payment-type-list.component.scss
@@ -43,3 +43,16 @@ li {
   margin-bottom: 5%;
 }
 
+.navbar {
+  margin-top: 10px;
+  display: flex;
+  justify-content: left;
+  height: 7.5vh;
+}
+
+.container-menu {
+  width: 25%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
