--- a/Front-end App/DeliverItAngularProject/src/app/add-payment-type/add-payment-type.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/add-payment-type/add-payment-type.component.html
@@ -1,9 +1,17 @@
 <link rel="stylesheet"
   href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+<link rel="stylesheet"
+  href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
+<nav class="navbar">
+  <div class="container-menu">
+    <span class="material-symbols-outlined" routerLink="/admin-panel">arrow_back</span>
+  </div>
+</nav>
+
+<h1 class="descriptionLabel">Agregar Forma de pago</h1>
 
 <div class="container">
-  <h1>Agregar Forma de pago</h1>
   <form class="input-button" [formGroup]="addPaymentTypeForm">
     <div class="input-group">
       <h6>Descripción</h6>
