--- a/Front-end App/DeliverItAngularProject/src/app/add-product-category/add-product-category.component.scss
+++ b/Front-end App/DeliverItAngularProject/src/app/add-product-category/add-product-category.component.scss
@@ -106,3 +106,17 @@ select {
 .button-container {
   margin-bottom: 50px;
 }
+
+.navbar {
+  margin-top: 10px;
+  display: flex;
+  justify-content: left;
+  height: 7.5vh;
+}
+
+.container-menu {
+  width: 25%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
