--- a/Front-end App/DeliverItAngularProject/src/app/admin-panel/admin-panel.component.scss
+++ b/Front-end App/DeliverItAngularProject/src/app/admin-panel/admin-panel.component.scss
@@ -1,3 +1,4 @@
+@import "../../styles.scss";
 .options {
   margin-bottom: 20%;
   border-color: #d1d1d1;
@@ -48,4 +49,14 @@
   overflow: hidden;
   margin-left: 6%;
   padding: 2px;
+}
+
+.logout-button {
+  border: 2px solid red;
+  background-color: #fff5f5;
+}
+
+.logout-button .button_text p {
+  color: red;
+  /* Texto rojo */
 }
