--- a/Front-end App/DeliverItAngularProject/src/app/edit-product-category/edit-product-category.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/edit-product-category/edit-product-category.component.html
@@ -1,5 +1,12 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+<link rel="stylesheet"
+  href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
+<nav class="navbar">
+  <div class="container-menu">
+    <span class="material-symbols-outlined" routerLink="/product-category-list">arrow_back</span>
+  </div>
+</nav>
 
 <div class="container">
   <h1>Editar categoría de producto</h1>
